# osrsFlipFinder

./: .gitignore  README.md  Testing.http  default.nix  default.old.nix  default_old.nix  jade.json  main.py  package-lock.json  pyproject.toml  setup.cfg
Brainstorm/: POT_LIST.txt  TABLES
archive/: build_item.py  info.py  item.py  main-old.py  margin.py  responses.py
bot/: api.py  app.py  main.py  queries.py  responses.py
bot/data_collection/: info.py  osrs_prices.db  osrs_to_db.py  player.py
bot/data_collection/utils/: format.py  item_list.py  tax.py  time.py
bot/format/: custom_table.py
bot/player/: highscores.py
conf/: Caddyfile
data_collection/: Crafting_LIST.txt  POT_LIST.txt  TABLE BUILDING  build_item.py
flipfinder/: package-lock.json  package.json
flipfinder/public/: index.html
flipfinder/src/: App.css  App.js  index.css  index.js
flipfinder/src/components/: GetItem.jsx  HomePage.jsx  Item.css  ItemIDHook.jsx  PlaceholderHomepage.jsx  getItem.js  index.css
flipfinder/src/components/utils/: AlphabeticSort.jsx
flipfinder/src/python/: build_item.py  data.py  item.py  items.py  main.py
flipfinder/src/python/database/: database.py
flipfinder/src/python/utils/: item_list.py  tax.py  text.py  time.py
python/: item.py
python/utils/: time.py
user_data/: fink.json
